<resources>
    <string name="app_name">lineUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="plus" ><b>+</b></string>

<!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_professors">Professors</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_tools">Tools</string>

<!--actions-->
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="user_name">User Name:</string>
</resources>
