<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textClock"
            android:layout_column="2" tools:targetApi="jelly_bean_mr1" />

    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:width="400px"
            android:inputType="text"
            android:importantForAutofill="no" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="Password:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:width="100px"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/submit" />
    </TableRow>


    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />


</TableLayout>